# lean-scratch2

./: AGENTS.md  CLAIM_GUARDRAILS.md  CODEX.md  CODEX_SKILLS.md  CODEX_TASKS.md  INSTALL_LINUX_MINT.md  Makefile  PLANS.md  README.md  REVIEW_RULES.md  environment.yml  pyproject.toml  requirements.txt
.codex/: MCP_AI_RESEARCH_BRIDGE_TEMPLATE.md  README.md  config.toml
experiments/: cross_level_invariance.py  r3_factor_search.py  r3_modular_determinant_probe.py  r3_spectral_probe.py
lean/: CollatzSkeleton.lean  README.md
plans/: ACTIVE_CODEX_PLAN.md
reports/: 20260513T063142Z_next_best_steps_orchestration.json  20260513T063142Z_next_best_steps_orchestration.md  20260513T063540Z_witness_manifest_regenerated_audit.json  20260513T063540Z_witness_manifest_regenerated_audit.md  20260513T063553Z_final_next_best_steps_orchestration_audit.json  20260513T063553Z_final_next_best_steps_orchestration_audit.md  20260513T064034Z_spectral-fast_analysis.md  20260513T064034Z_spectral-fast_witness.json  20260513T064040Z_modular-unit-fast_analysis.md  20260513T064040Z_modular-unit-fast_witness.json  20260513T064045Z_modular-full-fast_analysis.md  20260513T064045Z_modular-full-fast_witness.json  20260513T064103Z_cross-level_analysis.md  20260513T064103Z_cross-level_witness.json  20260513T064252Z_factor-python_analysis.md  20260513T064252Z_factor-python_witness.json  20260513T064411Z_plan_execution_orchestration.json  20260513T064411Z_plan_execution_orchestration.md  20260513T064647Z_plan_execution_orchestration_final_patch_audit.json  20260513T152017Z_state_summary.json  (+617 more)
(+101 files in other folders)
