[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz-codex-harness"
version = "0.1.0"
description = "Python/Sage research harness for the finite-level lifted-operator Collatz program."
requires-python = ">=3.10"
dependencies = [
  "sympy>=1.12",
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "rich>=13.7",
  "pyyaml>=6.0",
  "networkx>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
